translations, design, fix errors (language ul, logoutbutton, informationonscreen: z-index)
git-svn-id: https://svn.l3s.uni-hannover.de/learnweb/trunk/LearnwebOER/Learnweb@3875 422a2c9f-66af-4668-9993-60dc3b0871b8

--- a/WebContent/resources/main-template/main.css
+++ b/WebContent/resources/main-template/main.css
@@ -117,6 +117,7 @@ iframe { border: none }
 	height:2rem;
 	position:relative;
 	margin:1rem 1rem 0 0;
+	z-index:5;
 }
 #informationonscreen:hover{
 	background-color:#4ea68d; /* old color: 74beaa*/
@@ -203,6 +204,7 @@ iframe { border: none }
     width:2rem;
     height:2rem;
     position:relative;
+    z-index:5;
 }
 #loginbutton{
 	display:block;
@@ -514,10 +516,11 @@ iframe { border: none }
 
 form#add_resource { float:right; }
 .resource_button{
-	float: right;
-	position: relative;
-	top: -3px;
-	right: -5px;
+	float:right;
+	position:relative;
+	top:-3px;
+	right:-5px;
+	border-radius:2px !important;
 }
 
 /* general settings */
@@ -595,5 +598,6 @@ h5 {
 .ui-widget-content a{text-decoration:none;}
 .ui-widget-content a:hover{text-decoration:underline;}
 .ui-corner-all{border-radius:0px;}
+
 #right_pane .ui-button{border-radius: 0px;}
 #right_pane .greenbutton{border-radius:2px;}
